# drone-swarm-rl

./: README.md  pyproject.toml
RL_Agents/: train_waypoint_DDPG_agent.py  train_waypoint_agent.py
drone_swarm_rl/: drone.py  environment.py  swarm_metrics.py  waypoint_env.py
drone_swarm_rl/agents/: ddpg_agent_pytorch.py  dqn_agent_pytorch.py
examples/: basic_usage.py  custom_visualization.py  stable_flight.py  train_dqn_pytorch.py  train_waypoint_agent.py  turn_and_fly_out.py  waypoint_navigation.py
training_results/: distance_rewards.npy  episode_lengths.npy  episode_rewards.npy  metrics.json  termination_reasons.txt  waypoint_rewards.npy  waypoints_reached.npy
training_results/DDPG_training_20250405_140116/: metrics.npz
